[package]
name = "plexstatus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
quick-xml = { version = "0.26.0", features = ["serialize"] }
serde = { version = "1.0.147", features = ["derive"] }
toml = "0.5.9"
ureq = "2.5.0"
